@@ -12,32 +12,32 @@ import java.net.URL;
  */
 public class URLFactory
 {
-	public static URL createUrl(String spec)
-		throws PolloException
-	{
-		try
-		{
-			if (spec.startsWith("classpath:/"))
-			{
-				return URLFactory.class.getClassLoader().getResource(spec.substring(11, spec.length()));
-			}
+    public static URL createUrl(String spec)
+        throws PolloException
+    {
+        try
+        {
+            if (spec.startsWith("classpath:/"))
+            {
+                return URLFactory.class.getClassLoader().getResource(spec.substring(11, spec.length()));
+            }
             else if (spec.charAt(0) == '/')
             {
                 // something starting with a / is always a file path, even if :/ occurs within it
                 return new File(spec).toURL();
             }
-			else if (spec.indexOf(":/") != -1)
-			{
-				return new URL(spec);
-			}
-			else
-			{
-				return new File(spec).toURL();
-			}
-		}
-		catch (Exception e)
-		{
-			throw new PolloException("[URLFactory] Could not create url for " + spec, e);
-		}
-	}
+            else if (spec.indexOf(":/") != -1)
+            {
+                return new URL(spec);
+            }
+            else
+            {
+                return new File(spec).toURL();
+            }
+        }
+        catch (Exception e)
+        {
+            throw new PolloException("[URLFactory] Could not create url for " + spec, e);
+        }
+    }
 }
